# ironclaw

./: .gitignore  Cargo.toml  DEV_LOGS.md
core/: Cargo.toml
core/src/: lib.rs  llm.rs  registry.rs  runtime.rs
gateway/: Cargo.toml
gateway/src/: api.rs  main.rs
tools/: Cargo.toml  tools.json
tools/src/: bindings.rs  lib.rs
tools/wit/: ironclaw.wit
